Fix bug 1818722 - [Core]Can't create credential for docker host on IE11 since the page is truncated
Bug Number: 1818722

Reviewed-on: http://bellevue-ci.eng.vmware.com:8080/8834
Compute-Verified: jenkins <jenkins@vmware.com>
Closures-Verified: jenkins <jenkins@vmware.com>
Upgrade-Verified: jenkins <jenkins@vmware.com>
CS-Verified: jenkins <jenkins@vmware.com>
Bellevue-Verified: jenkins <jenkins@vmware.com>

--- a/ui/app/src/styles/main.scss
+++ b/ui/app/src/styles/main.scss
@@ -1024,11 +1024,6 @@ $main-list-view-right: 10px;
   padding-top: 12px !important;
 }
 
-.inline-edit, .inline-edit-header {
-  display: table;
-  width: 100%;
-}
-
 .inline-edit {
   form {
     padding-top: 0;
@@ -1044,11 +1039,6 @@ $main-list-view-right: 10px;
     }
   }
 }
-
-.inline-edit > div, .inline-edit > form, .inline-edit-header > div {
-  display: table-cell;
-}
-
 
 .inline-edit-toolbar {
   width: 60px;
@@ -1654,6 +1644,7 @@ $alert-text-color: #ffffff;
 
 .alert-holder.alert-hidden {
   height: 0px;
+  visibility: hidden;
   opacity: 0;
   pointer-events: none;
 }
